find_package(WrapITK REQUIRED)

WRAP_LIBRARY("${PROJECT_NAME}" Python)
  set(WRAPPER_LIBRARY_DEPENDS Base)
  set(WRAPPER_LIBRARY_LINK_LIBRARIES ITKCommon)
  set(WRAPPER_SWIG_LIBRARY_FILES ${WRAPPER_SWIG_LIBRARY_FILES} "${CMAKE_CURRENT_SOURCE_DIR}/itkDolfin.swg")

  WRAPPER_LIBRARY_CREATE_WRAP_FILES()
END_WRAP_LIBRARY()

